Update login with social account
